--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.0",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.4.10",
-    "next": "15.2.1",
+    "next": "^15.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
