--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "type": "module",
   "scripts": {
     "dev": "next dev --turbopack",
+    "generate:og": "node scripts/generate-og-images.mjs",
+    "prebuild": "node scripts/generate-og-images.mjs",
     "build": "next build",
     "start": "npx serve@latest out",
     "lint": "next lint"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.0",
+    "@resvg/resvg-js": "^2.6.2",
     "clsx": "^2.1.1",
     "framer-motion": "^12.4.10",
     "gray-matter": "^4.0.3",
@@ -21,7 +24,8 @@
     "react-dom": "^19.0.0",
     "rehype-pretty-code": "^0.14.1",
     "rehype-slug": "^6.0.0",
-    "remark-gfm": "^4.0.1"
+    "remark-gfm": "^4.0.1",
+    "satori": "^0.19.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
