--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "generate:og": "node scripts/generate-og-images.mjs",
-    "prebuild": "node scripts/generate-og-images.mjs && node scripts/generate-sitemap.mjs",
+    "prebuild": "node scripts/generate-og-images.mjs && node scripts/generate-sitemap.mjs && node scripts/generate-feeds.mjs",
     "build": "next build",
     "start": "npx serve@latest out",
     "lint": "next lint"
@@ -15,8 +15,10 @@
     "@headlessui/react": "^2.2.0",
     "@resvg/resvg-js": "^2.6.2",
     "clsx": "^2.1.1",
+    "feed": "^5.2.0",
     "framer-motion": "^12.4.10",
     "gray-matter": "^4.0.3",
+    "marked": "^17.0.2",
     "next": "15.4.11",
     "next-mdx-remote": "^6.0.0",
     "next-themes": "^0.4.6",
