Add readme to /.well-known and hide it from the public

--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,10 @@
     {
       "source": "/.well-known/webfinger",
       "destination": "/.well-known/webfinger"
+    },
+    {
+      "source": "/.well-known/README.md",
+      "destination": "/404"
     }
   ],
   "headers": [
