--- a/vercel.json
+++ b/vercel.json
@@ -2,20 +2,23 @@
   "rewrites": [
     {
       "source": "/.well-known/webfinger",
-      "destination": "/.well-known/webfinger"
+      "destination": "https://social.jg.dev/.well-known/webfinger"
+    },
+    {
+      "source": "/.well-known/host-meta",
+      "destination": "https://social.jg.dev/.well-known/host-meta"
+    },
+    {
+      "source": "/.well-known/nodeinfo",
+      "destination": "https://social.jg.dev/.well-known/nodeinfo"
     },
     {
       "source": "/.well-known/README.md",
       "destination": "/404"
-    }
-  ],
-  "headers": [
+    },
     {
-      "source": "/.well-known/webfinger",
-      "headers": [
-        { "key": "Content-Type", "value": "application/jrd+json" },
-        { "key": "Access-Control-Allow-Origin", "value": "*" }
-      ]
+      "source": "/.well-known/oldwebfinger",
+      "destination": "/404"
     }
   ]
 }
